Spring.FluentContext
===========================================

Version 1.0.6
-------------------------------------------
+ Added IDefinition<> interface describing object definitions.
+ Extended constructor and property binding methods with To(IDefinition<> definition) method allowing to provide definition of object that would be bound.
+ Added Ref class allowing to create reference definitions (pointing to existing objects in container).
+ Added Value class allowing to create value definitions (constant values).
+ Added Collection class allowing to create collection definitions (arrays/list).

Version 1.0.5
-------------------------------------------
+ Modified UseStaticFactoryMethod() and UseFactoryMethod() methods to accept generic factory methods, like:
  _ctx.RegisterDefault<ComplexType>().UseStaticFactoryMethod(GenericTypeFactory.CreateInstance<ComplexType>);
+ Modified BindLookupMethod() method to throw meaningful exception if target method is generic

Version 1.0.4
-------------------------------------------
+ Recreated nuget package to include newest version of dll

Version 1.0.3
-------------------------------------------
+ Synchronized version with NuGet package version
+ Added documentation to public members

Version 1.0.0
-------------------------------------------
+ Implemented basic fluent API features
+ Created changelog