@@ -8,6 +8,7 @@ Version 1.0.6
 + Added Ref class allowing to create reference definitions (pointing to existing objects in container).
 + Added Value class allowing to create value definitions (constant values).
 + Added Collection class allowing to create collection definitions (arrays/list).
++ Added Def class allowing to create inline object definitions.
 
 Version 1.0.5
 -------------------------------------------
